[gd_scene load_steps=24 format=3 uid="uid://b8kiax82hqv6v"]

[ext_resource type="Script" uid="uid://c3yx8f384crku" path="res://scripts/Menu/parametre.gd" id="1_3j7aq"]
[ext_resource type="StyleBox" uid="uid://b14tpm8fhc5ca" path="res://styles/hover2.tres" id="3_m4m2w"]
[ext_resource type="Texture2D" uid="uid://ba30tw5u4lb5k" path="res://assets/icon_chevron_left.png" id="3_tps0i"]
[ext_resource type="Texture2D" uid="uid://c6u5qnaacygab" path="res://assets/icon_chevron_right.png" id="4_ekgrj"]
[ext_resource type="StyleBox" uid="uid://k0v1kbehouky" path="res://styles/pressed2.tres" id="4_qh40r"]
[ext_resource type="FontFile" uid="uid://cwmg358cx5pjh" path="res://data/LilitaOne-Regular.ttf" id="4_vpmvi"]
[ext_resource type="StyleBox" uid="uid://c4ghon41c0rkb" path="res://styles/normal2.tres" id="5_3j7aq"]
[ext_resource type="Texture2D" uid="uid://bhlxe7b4nmfb0" path="res://assets/switch/Switch-2.png" id="6_bmkvy"]
[ext_resource type="Texture2D" uid="uid://b72ydgeigdbnk" path="res://assets/switch/Switch.png" id="7_cskwj"]
[ext_resource type="Texture2D" uid="uid://rb0ae5ooy311" path="res://assets/switch/Switch-1.png" id="8_8od8g"]
[ext_resource type="Texture2D" uid="uid://dp4ggaksqx6i4" path="res://assets/slider control.png" id="8_cskwj"]
[ext_resource type="Texture2D" uid="uid://iecdbom48n3i" path="res://assets/slider control-1.png" id="9_8od8g"]
[ext_resource type="Texture2D" uid="uid://35mhke200qd7" path="res://assets/Grabber.png" id="10_4brve"]
[ext_resource type="Texture2D" uid="uid://bsnkqx35f1253" path="res://assets/BACK.png" id="16_a5tmk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eb4o7"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_onb5e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j2thx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vpmvi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_om2lw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x1jkp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cskwj"]
bg_color = Color(0.827451, 0.827451, 0.827451, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qh40r"]
bg_color = Color(0.384314, 0.129412, 0.00392157, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3j7aq"]
bg_color = Color(0.384314, 0.129412, 0.00392157, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[node name="Parametre" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3j7aq")

[node name="TextureRect" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_eb4o7")

[node name="Protection" type="Button" parent="TextureRect/Panel"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0894737
anchor_top = 0.79
anchor_right = 0.315038
anchor_bottom = 0.91625
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_vpmvi")
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_onb5e")
theme_override_styles/hover = ExtResource("3_m4m2w")
theme_override_styles/pressed = ExtResource("4_qh40r")
theme_override_styles/normal = ExtResource("5_3j7aq")
text = "Data Protection Page"
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Publitique" type="Button" parent="TextureRect/Panel"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.396992
anchor_top = 0.7925
anchor_right = 0.622557
anchor_bottom = 0.91875
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_vpmvi")
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_j2thx")
theme_override_styles/hover = ExtResource("3_m4m2w")
theme_override_styles/pressed = ExtResource("4_qh40r")
theme_override_styles/normal = ExtResource("5_3j7aq")
text = "Privacy Policy"
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="DataConsent" type="Button" parent="TextureRect/Panel"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.707519
anchor_top = 0.79
anchor_right = 0.933083
anchor_bottom = 0.91625
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_vpmvi")
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_vpmvi")
theme_override_styles/hover = ExtResource("3_m4m2w")
theme_override_styles/pressed = ExtResource("4_qh40r")
theme_override_styles/normal = ExtResource("5_3j7aq")
text = "Review Data Consent"
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Vibrations" type="VBoxContainer" parent="TextureRect/Panel"]
visible = false
layout_mode = 0
anchor_left = 0.0714286
anchor_top = 0.2425
anchor_right = 0.298496
anchor_bottom = 0.445
offset_left = -1.00001
offset_top = 6.0
offset_right = -3.0
offset_bottom = 9.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="TextureRect/Panel/Vibrations"]
visible = false
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vpmvi")
theme_override_font_sizes/font_size = 40
text = "Vibes"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton" type="TextureButton" parent="TextureRect/Panel/Vibrations"]
visible = false
custom_minimum_size = Vector2(105, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
toggle_mode = true
texture_normal = ExtResource("6_bmkvy")
texture_pressed = ExtResource("7_cskwj")
texture_hover = ExtResource("8_8od8g")

[node name="Langue" type="VBoxContainer" parent="TextureRect/Panel"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.371428
anchor_top = 0.375
anchor_right = 0.644361
anchor_bottom = 0.5825
offset_left = -3.05176e-05
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="TextureRect/Panel/Langue"]
visible = false
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vpmvi")
theme_override_font_sizes/font_size = 40
text = "Language"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/Panel/Langue"]
visible = false
layout_mode = 2
size_flags_vertical = 6

[node name="Button" type="Button" parent="TextureRect/Panel/Langue/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_om2lw")
icon = ExtResource("3_tps0i")
flat = true

[node name="Label" type="Label" parent="TextureRect/Panel/Langue/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vpmvi")
theme_override_font_sizes/font_size = 30
text = "ENGLISH"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="Button" parent="TextureRect/Panel/Langue/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_x1jkp")
icon = ExtResource("4_ekgrj")
flat = true

[node name="Notifications" type="VBoxContainer" parent="TextureRect/Panel"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.712782
anchor_top = 0.23875
anchor_right = 0.93985
anchor_bottom = 0.44125
offset_left = -8.0
offset_top = 9.0
offset_right = -10.0
offset_bottom = 12.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="TextureRect/Panel/Notifications"]
visible = false
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vpmvi")
theme_override_font_sizes/font_size = 40
text = "Notifications"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton" type="TextureButton" parent="TextureRect/Panel/Notifications"]
visible = false
custom_minimum_size = Vector2(105, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
toggle_mode = true
texture_normal = ExtResource("6_bmkvy")
texture_pressed = ExtResource("7_cskwj")
texture_hover = ExtResource("8_8od8g")

[node name="Musique" type="VBoxContainer" parent="TextureRect/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0954887
anchor_top = 0.5075
anchor_right = 0.340602
anchor_bottom = 0.69
offset_left = 9.5113
offset_top = -56.0
offset_right = 38.398
offset_bottom = -56.0
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="TextureRect/Panel/Musique"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vpmvi")
theme_override_font_sizes/font_size = 40
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider1" type="HSlider" parent="TextureRect/Panel/Musique"]
layout_mode = 2
theme_override_icons/grabber = ExtResource("8_cskwj")
theme_override_icons/grabber_highlight = ExtResource("9_8od8g")
theme_override_icons/grabber_disabled = ExtResource("10_4brve")
theme_override_styles/slider = SubResource("StyleBoxFlat_cskwj")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_qh40r")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_3j7aq")
max_value = 10.0
metadata/_edit_use_anchors_ = true

[node name="EffetsSonores" type="VBoxContainer" parent="TextureRect/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.682707
anchor_top = 0.50625
anchor_right = 0.927819
anchor_bottom = 0.68875
offset_left = -27.707
offset_top = -55.0
offset_right = 1.18097
offset_bottom = -55.0
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="TextureRect/Panel/EffetsSonores"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vpmvi")
theme_override_font_sizes/font_size = 40
text = "Sound effects"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider1" type="HSlider" parent="TextureRect/Panel/EffetsSonores"]
layout_mode = 2
theme_override_icons/grabber = ExtResource("8_cskwj")
theme_override_icons/grabber_highlight = ExtResource("9_8od8g")
theme_override_icons/grabber_disabled = ExtResource("10_4brve")
theme_override_styles/slider = SubResource("StyleBoxFlat_cskwj")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_qh40r")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_3j7aq")
max_value = 10.0
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
custom_minimum_size = Vector2(0, 117)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
color = Color(0.384314, 0.129412, 0.00784314, 1)

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/ColorRect/MarginContainer"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="TextureRect/ColorRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("16_a5tmk")

[node name="Label" type="Label" parent="TextureRect/ColorRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_vpmvi")
theme_override_font_sizes/font_size = 55
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[connection signal="pressed" from="TextureRect/Panel/Langue/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="TextureRect/Panel/Langue/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="TextureRect/ColorRect/MarginContainer/HBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
